# connect-extension-xvs

./: .eslintrc.yaml  .flake8  .gitignore  CBCClientHowTo.md  CHANGELOG.md  Dockerfile  HOWTO.md  LICENSE  README.md  connect-deployment.yml  docker-compose.yml  jest.config.js  overview.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: test.yml
__mocks__/: fileMock.js  styleMock.js
connect_ext_ppr/: constants.py  db.py  errors.py  events.py  extension.json  filters.py  pagination.py  schemas.py  service.py  tasks_manager.py  utils.py  validator.py  webapp.py
connect_ext_ppr/client/: __init__.py  auth.py  client.py  exception.py  mixin.py  ns.py  utils.py
connect_ext_ppr/models/: cbc_extenstion.py  configuration.py  deployment.py  enums.py  file.py  models_utils.py  ppr.py  product.py  replicas.py  task.py  utils.py
connect_ext_ppr/services/: cbc_extension.py  cbc_hub.py  pricing.py
connect_ext_ppr/static/: deployment-details.0ef55e9ba6d0799e3f2a.js  deployment-details.272e874bc9496204df16.js  deployment-details.3951a71f26c6065a8119.js  deployment-details.39e6e55778b4493e8317.js  deployment-details.3aa00b032250286803cc.js  deployment-details.4192750352567f86f23f.js  deployment-details.4ea6a15b7919688d2874.js  deployment-details.6821e06b1fbacca9d4c7.js  deployment-details.74b7244a090b39702a09.js  deployment-details.762bdc77ba188478a878.js  deployment-details.7a184ffdefaf8ff0ca5a.js  deployment-details.7d78c4af310e3cb568fc.js  (+110 more)
tests/: __init__.py  conftest.py  test_db.py  test_deployment_requests.py  test_errors.py  test_events.py  test_pagination.py  test_schemas.py  test_service.py  test_tasks_manager.py  test_utils.py  test_webapp.py
(+144 files in other folders)
